--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1 class="text-3xl font-bold underline">Portfolio</h1>
-<router-outlet />
+<div class="bg-stone-700">
+    <app-nav-bar></app-nav-bar>
+    <router-outlet />
+</div>
