--- a/src/app/core/header/nav-bar.component.html
+++ b/src/app/core/header/nav-bar.component.html
@@ -10,11 +10,18 @@
             <li class="hover:text-white"><a href="">Contact</a></li>
         </ul>
     </nav>
-    <div class="sm:hidden flex items-center mr-6">
+    <div class="sm:hidden flex items-center mr-6 relative">
         @if(!isSelected) {
-            <i class="fa-solid fa-bars hover:text-white font-medium" (click)="onToggle()"></i>
+            <i class="fa-solid fa-bars hover:text-white text-2xl font-medium" (click)="onToggle()"></i>
         } @else {
-            <i class="fa-solid fa-xmark hover:text-white font-medium" (click)="onToggle()"></i>
+            <i class="fa-solid fa-xmark hover:text-white text-2xl font-medium" (click)="onToggle()"></i>
+            <div class="absolute top-0 right-0 mt-10 rounded-md shadow-lg ring-1 ring-black/5" tabindex="-1">
+                <div class="flex flex-col py-1 text-secondary font-medium">
+                    <a href="" class="px-4 py-2 hover:bg-gray-50" tabindex="-1" id="menu-item-0">About</a>
+                    <a href="" class="px-4 py-2 hover:bg-gray-50" tabindex="-1" id="menu-item-1">Work</a>
+                    <a href="" class="px-4 py-2 hover:bg-gray-50" tabindex="-1" id="menu-item-2">Contact</a>
+                </div>
+            </div>
         }
     </div>
 </div>
