feat: create new features about, work & contact
- create new features about, work & contact containing only a `p` tag

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div class="bg-stone-700">
-  <app-nav-bar></app-nav-bar>
+<div class="flex flex-col bg-stone-700">
+  <app-nav-bar class="fixed w-screen"></app-nav-bar>
+  <app-about class="h-screen mt-20"></app-about>
+  <app-work class="h-screen"></app-work>
+  <app-contact class="h-screen"></app-contact>
 </div>
