feat: implement jumping to section
- implement jumping to sections about, work & contact based on nav
  element click

--- a/src/app/core/header/nav-bar.component.html
+++ b/src/app/core/header/nav-bar.component.html
@@ -5,9 +5,9 @@
     </div>
     <nav class="sm:block hidden content-center">
         <ul class="flex gap-10 text-secondary font-medium">
-            <li class="hover:text-white"><a id="navAbout" href="">About</a></li>
-            <li class="hover:text-white"><a id="navWork" href="">Work</a></li>
-            <li class="hover:text-white"><a id="navContact" href="">Contact</a></li>
+            <li class="hover:text-white"><a id="navAbout" routerLink="/" fragment="about">About</a></li>
+            <li class="hover:text-white"><a id="navWork" routerLink="/" fragment="work">Work</a></li>
+            <li class="hover:text-white"><a id="navContact" routerLink="/" fragment="contact">Contact</a></li>
         </ul>
     </nav>
     <div id="dropdownMenu" class="sm:hidden flex items-center mr-6 relative">
@@ -17,9 +17,9 @@
             <i id="closeIcon" class="fa-solid fa-xmark hover:text-white text-2xl font-medium" (click)="onToggle()"></i>
             <div class="absolute top-0 right-0 mt-10 rounded-md shadow-lg ring-1 ring-black/5" tabindex="-1">
                 <div class="flex flex-col py-1 text-secondary font-medium">
-                    <a href="" class="px-4 py-2 hover:bg-gray-50" tabindex="-1" id="aboutMenuItem">About</a>
-                    <a href="" class="px-4 py-2 hover:bg-gray-50" tabindex="-1" id="workMenuItem">Work</a>
-                    <a href="" class="px-4 py-2 hover:bg-gray-50" tabindex="-1" id="contactMenuItem">Contact</a>
+                    <a routerLink="/" fragment="about" class="px-4 py-2 hover:bg-gray-50" tabindex="-1" id="aboutMenuItem">About</a>
+                    <a routerLink="/" fragment="work" class="px-4 py-2 hover:bg-gray-50" tabindex="-1" id="workMenuItem">Work</a>
+                    <a routerLink="/" fragment="contact" class="px-4 py-2 hover:bg-gray-50" tabindex="-1" id="contactMenuItem">Contact</a>
                 </div>
             </div>
         }
