feat: apply basic styling and positioning

--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,5 +1,9 @@
-<div>
-    <h1 id="title" class="text-white">Hi, I'm <span class="text-red-800">Manu</span></h1>
-    <p id="description">I'm a Full-Stack Software Engineer</p>
+<div class="flex flex-row justify-center h-screen">
+  <div class="flex flex-col w-5/6 sm:w-3/4">
+    <div>
+      <h1 id="title" class="text-white">Hi, I'm <span class="text-red-800">Manu</span></h1>
+      <p id="description" class="text-white">I'm a Full-Stack Software Engineer</p>
+    </div>
+    <app-workstation></app-workstation>
+  </div>
 </div>
-<app-workstation></app-workstation>
