--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col bg-stone-700">
   <app-nav-bar class="fixed w-screen"></app-nav-bar>
-  <app-home class="h-screen mt-20"></app-home>
-  <app-about id="about" class="h-screen mt-20"></app-about>
+  <app-home class="mt-20"></app-home>
+  <app-about id="about" class="h-screen"></app-about>
   <app-work id="work" class="h-screen"></app-work>
   <app-contact id="contact" class="h-screen"></app-contact>
 </div>
