feat: display overview section
- fix styling in `home.component.html`
- display small title, title and overview text

--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row justify-center h-screen">
+<div class="flex flex-row justify-center">
   <div class="flex flex-col w-5/6 sm:w-3/4">
     <div>
       <h1 id="title" class="text-white">Hi, I'm <span class="text-red-800">Manu</span></h1>
