--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col bg-stone-700">
+<div class="flex flex-col bg-stone-700 space-y-36">
   <app-nav-bar></app-nav-bar>
-  <app-home class="mt-20"></app-home>
+  <app-home></app-home>
   <app-about id="about"></app-about>
   <app-work id="work" class="h-screen"></app-work>
   <app-contact id="contact" class="h-screen"></app-contact>
