--- a/src/app/feature/work/work.component.html
+++ b/src/app/feature/work/work.component.html
@@ -1,1 +1,6 @@
-<p>work works!</p>
+<div class="flex flex-row justify-center">
+  <div class="flex flex-col w-5/6 sm:w-3/4">
+    <p id="smallTitle" class="text-gray-500">WHAT I HAVE DONE SO FAR</p>
+    <h2 id="title" class="text-white mt-2 mb-3">Experience.</h2>
+  </div>
+</div>
