--- a/src/app/feature/work/experience-card.component.html
+++ b/src/app/feature/work/experience-card.component.html
@@ -1,6 +1,9 @@
-@if(!!experience?.jobTitle && !!experience?.company) {
-    <div class="flex flex-col bg-red-500 rounded-lg shadow-xl shadow-red-500/75 ring-1 ring-black/5">
-        <h3 class="text-white font-bold">{{ experience?.jobTitle }}</h3>
-        <p class="text-white font-medium">{{ experience?.company }}</p>
-    </div>
-}
+<div class="flex flex-col bg-red-500 px-10 py-6 w-5/6 md:w-1/2 rounded-lg shadow-xl shadow-red-500/75 ring-1 ring-black/5">
+  <h3 class="text-white font-bold">{{ experience.jobTitle }}</h3>
+  <p class="text-white font-medium">{{ experience.company }}</p>
+  @for (project of experience.projects; track project) {
+  <app-project-section class="mt-6" [project]="project"></app-project-section>
+  } @if (!!experience.task) {
+  <app-task-section class="mt-6" [task]="experience.task"></app-task-section>
+  }
+</div>
