feat: add experience in `WorkComponent`

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <app-nav-bar></app-nav-bar>
   <app-home></app-home>
   <app-about id="about"></app-about>
-  <app-work id="work" class="h-screen"></app-work>
+  <app-work id="work"></app-work>
   <app-contact id="contact" class="h-screen"></app-contact>
 </div>
