--- a/src/app/feature/work/work.component.html
+++ b/src/app/feature/work/work.component.html
@@ -4,10 +4,7 @@
     <p id="smallTitle" class="text-gray-500">WHAT I HAVE DONE SO FAR</p>
     <h2 id="title" class="text-white mt-2 mb-3">Experience.</h2>
     @for(experience of getExperiences(); track experience) {
-    <app-experience-card
-      class="mt-6"
-      [experience]="experience"
-    ></app-experience-card>
+    <app-experience-card class="mt-5" [experience]="experience"></app-experience-card>
     }
   </div>
 </div>
