--- a/src/app/core/header/nav-bar.component.html
+++ b/src/app/core/header/nav-bar.component.html
@@ -1,7 +1,7 @@
 <div class="fixed w-screen">
     <div class="flex justify-between mx-5 md:mx-5 sm:mx-20">
         <div id="logoNameOccupationContainer" class="flex gap-3 items-center cursor-pointer" (click)="onLogoNameOccupationClick()">
-            <img id="logo" class="w-9 h-9" src="assets/img/noji-enterprise-high-resolution-logo.png">
+            <img id="logo" class="w-9 h-9" src="assets/img/noji-enterprise-high-resolution-logo.png" alt="Noji Enterprise Logo">
             <p id="nameOccupation"class="text-white font-bold">Manu&nbsp;<span class="md:inline hidden">|&nbsp;Fullstack Software Engineer</span></p>
         </div>
         <nav class="sm:block hidden content-center">
