--- a/src/app/feature/work/components/experience-card.component.html
+++ b/src/app/feature/work/components/experience-card.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col bg-red-500 px-10 py-6 w-5/6 md:w-1/2 rounded-lg shadow-xl shadow-red-500/75 ring-1 ring-black/5">
+<div class="flex flex-col bg-red-500 px-10 py-6 rounded-lg shadow-xl shadow-red-500/75 ring-1 ring-black/5">
   <h3 class="text-white font-bold">{{ experience.jobTitle }}</h3>
   <p class="text-white font-medium">{{ experience.company }}</p>
   @for (project of experience.projects; track project) {
