refactor: introduce `WorkExperienceComponent`

--- a/src/app/feature/work/components/work.component.html
+++ b/src/app/feature/work/components/work.component.html
@@ -1,42 +1,1 @@
-@if (getExperiences().length > 0) {
-<div id="experienceContainer" class="flex flex-row justify-center">
-  <div class="flex flex-col w-5/6 sm:w-3/4">
-    <p id="smallTitle" class="text-gray-500">WHAT I HAVE DONE SO FAR</p>
-    <h2 id="title" class="text-white mt-2 mb-3">Experience.</h2>
-    <div class="grid grid-cols-[0.125rem_1fr] gap-x-16 lg:hidden">
-        @for(experience of getExperiences(); track experience) {
-            <div class="relative bg-green-500">
-                <div class="absolute w-16 h-16 -translate-x-1/2 mt-10">
-                    <img id="companyIconMobile" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.companyLogo }}" alt="{{ experience.company }} logo">
-                </div>
-            </div>
-            <div class="flex flex-col mt-8 gap-y-2">
-                <div id="workingPeriodMobile" class="text-white">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
-                <app-experience-card id="experienceCardMobile" [experience]="experience"></app-experience-card>
-            </div>
-        }
-    </div>
-    <div class="hidden lg:grid grid-cols-[1fr_0.125rem_1fr] gap-x-16">
-        @for(experience of getExperiences(); track experience; let odd = $odd) {
-            @if (odd) {
-                <div id="workingPeriodDesktop" class="text-white text-right mt-14">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
-                <div class="relative bg-green-500">
-                    <div class="absolute w-16 h-16 -translate-x-1/2 mt-10">
-                        <img id="companyIconDesktop" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.companyLogo }}" alt="{{ experience.company }} logo">
-                    </div>
-                </div>
-                <app-experience-card id="experienceCardDesktop" class="mt-14" [experience]="experience"></app-experience-card>
-            } @else {
-                <app-experience-card id="experienceCardDesktop" class="mt-14" [experience]="experience"></app-experience-card>
-                <div class="relative bg-green-500">
-                    <div class="absolute w-16 h-16 -translate-x-1/2 mt-10">
-                        <img id="companyIconDesktop" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.companyLogo }}" alt="{{ experience.company }} logo">
-                    </div>
-                </div>
-                <div id="workingPeriodDesktop" class="text-white mt-14">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
-            }
-        }
-    </div>
-  </div>
-</div>
-}
+<app-work-experience></app-work-experience>
