--- a/src/app/feature/work/components/experience-card.component.html
+++ b/src/app/feature/work/components/experience-card.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col bg-red-500 px-10 py-6 rounded-lg shadow-xl shadow-red-500/75 ring-1 ring-black/5">
-  <h3 class="text-white font-bold">{{ history.jobTitle }}</h3>
-  <p class="text-white font-medium">{{ history.company }}</p>
+  <h3 class="text-white font-bold">{{ history.profession }}</h3>
+  <p class="text-white font-medium">{{ history.institution }}</p>
   @for (project of history.projects; track project) {
   <app-project-section class="mt-6" [project]="project"></app-project-section>
   } @if (!!history.task) {
