--- a/src/app/feature/work/components/work-experience.component.html
+++ b/src/app/feature/work/components/work-experience.component.html
@@ -7,7 +7,7 @@
         @for(experience of getExperiences(); track experience) {
             <div class="relative bg-green-500">
                 <div class="absolute w-16 h-16 -translate-x-1/2 mt-10">
-                    <img id="companyIconMobile" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.companyLogo }}" alt="{{ experience.company }} logo">
+                    <img id="logoMobile" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
                 </div>
             </div>
             <div class="flex flex-col mt-8 gap-y-2">
@@ -22,7 +22,7 @@
                 <div id="workingPeriodDesktop" class="text-white text-right mt-14">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
                 <div class="relative bg-green-500">
                     <div class="absolute w-16 h-16 -translate-x-1/2 mt-10">
-                        <img id="companyIconDesktop" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.companyLogo }}" alt="{{ experience.company }} logo">
+                        <img id="logoDesktop" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
                     </div>
                 </div>
                 <app-experience-card id="experienceCardDesktop" class="mt-14" [history]="experience"></app-experience-card>
@@ -30,7 +30,7 @@
                 <app-experience-card id="experienceCardDesktop" class="mt-14" [history]="experience"></app-experience-card>
                 <div class="relative bg-green-500">
                     <div class="absolute w-16 h-16 -translate-x-1/2 mt-10">
-                        <img id="companyIconDesktop" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.companyLogo }}" alt="{{ experience.company }} logo">
+                        <img id="logoDesktop" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
                     </div>
                 </div>
                 <div id="workingPeriodDesktop" class="text-white mt-14">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
