refactor: remove `AcademicHistoryComponent`

--- a/src/app/feature/work/components/work.component.html
+++ b/src/app/feature/work/components/work.component.html
@@ -1,2 +1,1 @@
-<app-work-experience></app-work-experience>
-<app-academic-history></app-academic-history>
+<app-work-experience [history]="workExperience"></app-work-experience>
