--- a/src/app/feature/work/components/work.component.html
+++ b/src/app/feature/work/components/work.component.html
@@ -1,1 +1,1 @@
-<app-work-experience [history]="workExperience"></app-work-experience>
+<app-experience [smallTitle]="'WHAT I HAVE DONE SO FAR'" [title]="'Experience.'" [history]="workExperience"></app-experience>
