--- a/src/app/feature/about/components/about.component.html
+++ b/src/app/feature/about/components/about.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-row justify-center">
   <div class="flex flex-col w-5/6 sm:w-3/4">
-    <p id="smallTitle" class="text-gray-500">INTRODUCTION</p>
-    <h2 id="title" class="text-white mt-2 mb-3">Overview.</h2>
-    <p id="overviewText" class="text-gray-500 md:w-3/4 lg:w-2/3 xl:w-1/2">
+    <p id="smallTitle">INTRODUCTION</p>
+    <h2 id="title">Overview.</h2>
+    <p id="overviewText" class="md:w-3/4 lg:w-2/3 xl:w-1/2">
       I am a Full-Stack Software Engineer with hands-on experience in developing
       and testing scalable web applications within an agile team consisting of
       Software Engineers, UI / UX Designers and Business Analysts. With a solid
