--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-row justify-center">
   <div class="flex flex-col w-5/6 sm:w-3/4">
     <div>
-      <h1 id="title" class="text-white">Hi, I'm <span class="text-red-500">Manu</span></h1>
-      <p id="description" class="text-white">I'm a Full-Stack Software Engineer</p>
+      <h1 id="title">Hi, I'm <span class="text-red-500">Manu</span></h1>
+      <p id="description" class="text-white sm:text-lg md:text-2xl">I'm a Full-Stack Software Engineer</p>
     </div>
     <app-workstation></app-workstation>
   </div>
