--- a/src/app/feature/work/components/project-section.component.html
+++ b/src/app/feature/work/components/project-section.component.html
@@ -1,4 +1,4 @@
-<h4 class="text-slate-300">{{ project.title }}</h4>
+<h4>{{ project.title }}</h4>
 <p>{{ project.description }}</p>
 
 @if (!!project.task) {
