--- a/src/app/feature/work/components/experience.component.html
+++ b/src/app/feature/work/components/experience.component.html
@@ -1,39 +1,39 @@
 @if (getExperiences().length > 0) {
 <div id="experienceContainer" class="flex flex-row justify-center">
   <div class="flex flex-col w-5/6 sm:w-3/4">
-    <p id="smallTitle" class="text-gray-500">{{ smallTitle }}</p>
-    <h2 id="title" class="text-white mt-2 mb-3">{{ title }}</h2>
-    <div class="grid grid-cols-[0.125rem_1fr] gap-x-16 lg:hidden">
+    <p id="smallTitle" class="text-white">{{ smallTitle }}</p>
+    <h2 id="title">{{ title }}</h2>
+    <div class="grid grid-cols-[0.1rem_1fr] gap-x-16 lg:hidden">
         @for(experience of getExperiences(); track experience) {
-            <div class="relative bg-green-500">
-                <div class="absolute w-16 h-16 -translate-x-1/2 mt-10">
-                    <img id="logoMobile" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+            <div class="relative bg-gradient-to-b from-red-500 via-red-700 to-red-500">
+                <div class="absolute w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500 -translate-x-1/2 mt-20">
+                    <img id="logoMobile" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
                 </div>
             </div>
-            <div class="flex flex-col mt-8 gap-y-2">
+            <div class="flex flex-col mt-20 gap-y-2">
                 <div id="workingPeriodMobile" class="text-white">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
                 <app-experience-card id="experienceCardMobile" [history]="experience"></app-experience-card>
             </div>
         }
     </div>
-    <div class="hidden lg:grid grid-cols-[1fr_0.125rem_1fr] gap-x-16">
+    <div class="hidden lg:grid grid-cols-[1fr_0.1rem_1fr] gap-x-16">
         @for(experience of getExperiences(); track experience; let odd = $odd) {
             @if (odd) {
-                <div id="workingPeriodDesktop" class="text-white text-right mt-14">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
-                <div class="relative bg-green-500">
-                    <div class="absolute w-16 h-16 -translate-x-1/2 mt-10">
-                        <img id="logoDesktop" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                <div id="workingPeriodDesktop" class="text-white text-right mt-24">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
+                <div class="relative bg-gradient-to-b from-red-500 via-red-700 to-red-500">
+                    <div class="absolute w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500 -translate-x-1/2 mt-20">
+                        <img id="logoDesktop" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
                     </div>
                 </div>
-                <app-experience-card id="experienceCardDesktop" class="mt-14" [history]="experience"></app-experience-card>
+                <app-experience-card id="experienceCardDesktop" class="mt-24" [history]="experience"></app-experience-card>
             } @else {
-                <app-experience-card id="experienceCardDesktop" class="mt-14" [history]="experience"></app-experience-card>
-                <div class="relative bg-green-500">
-                    <div class="absolute w-16 h-16 -translate-x-1/2 mt-10">
-                        <img id="logoDesktop" class="w-full h-full bg-white rounded-full border-4 border-green-500" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                <app-experience-card id="experienceCardDesktop" class="mt-24" [history]="experience"></app-experience-card>
+                <div class="relative bg-gradient-to-b from-red-500 via-red-700 to-red-500">
+                    <div class="absolute w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500 -translate-x-1/2 mt-20">
+                        <img id="logoDesktop" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
                     </div>
                 </div>
-                <div id="workingPeriodDesktop" class="text-white mt-14">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
+                <div id="workingPeriodDesktop" class="text-white mt-24">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
             }
         }
     </div>
