--- a/src/app/feature/work/components/task-section.component.html
+++ b/src/app/feature/work/components/task-section.component.html
@@ -1,7 +1,7 @@
-<p class="text-slate-300">{{ task.taskTitle }}</p>
+<h4>{{ task.taskTitle }}</h4>
 
 <ul class="list-disc list-inside">
   @for(task of task.tasks; track task) {
-  <li>{{ task }}</li>
+  <li class="text-white text-sm">{{ task }}</li>
   }
 </ul>
