--- a/src/app/feature/work/components/work.component.html
+++ b/src/app/feature/work/components/work.component.html
@@ -1,4 +1,10 @@
 <div class="flex flex-col space-y-20 md:space-y-36">
     <app-experience id="workExperience" [smallTitle]="'WHAT I HAVE DONE SO FAR'" [title]="'Experience.'" [history]="workExperience"></app-experience>
     <app-experience id="academicHistory" [smallTitle]="'WHAT I HAVE STUDIED SO FAR'" [title]="'Academic History.'" [history]="academicHistory"></app-experience>
+    <div class="flex flex-row justify-center">
+        <div class="flex flex-row flex-wrap justify-center gap-x-10 gap-y-10 w-5/6 sm:w-3/4">
+        @for(technology of technologies; track technology) {
+                <app-technology-orb [technology]="technology" class="w-32 h-32"></app-technology-orb>
+            }
+    </div>
 </div>
