--- a/src/app/feature/work/components/experience-card.component.html
+++ b/src/app/feature/work/components/experience-card.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col bg-gradient-to-b from-red-500 to-red-700 px-10 py-6 rounded-lg shadow-xl shadow-red-400/75 ring-1 ring-black/5">
+<div class="flex flex-col bg-gradient-to-b from-red-500 to-red-700 px-10 py-6 rounded-lg ring-1 ring-black/5">
   <h3>{{ history.profession }}</h3>
   <p>{{ history.institution }}</p>
   @for (project of history.projects; track project) {
