--- a/src/app/feature/work/components/work.component.html
+++ b/src/app/feature/work/components/work.component.html
@@ -4,7 +4,7 @@
     <div class="flex flex-row justify-center">
         <div class="flex flex-row flex-wrap justify-center gap-x-10 gap-y-10 w-5/6 sm:w-3/4">
         @for(technology of technologies; track technology) {
-                <app-technology-orb [technology]="technology" class="w-32 h-32"></app-technology-orb>
+                <app-technology-orb [technology]="technology" class="w-28 h-28 lg:w-32 lg:h-32"></app-technology-orb>
             }
     </div>
 </div>
