--- a/src/app/core/header/nav-bar.component.html
+++ b/src/app/core/header/nav-bar.component.html
@@ -13,14 +13,14 @@
         </nav>
         <div id="dropdownMenu" class="sm:hidden flex items-center relative">
             @if(!isSelected) {
-                <i id="menuIcon" class="fa-solid fa-bars text-white hover:text-red-500 text-2xl font-medium" (click)="onDropdownMenuClick()"></i>
+                <i id="menuIcon" class="fa-solid fa-bars text-white hover:text-red-500 hover:scale-110 transition duration-150 ease-in-out text-2xl font-medium" (click)="onDropdownMenuClick()"></i>
             } @else {
-                <i id="closeIcon" class="fa-solid fa-xmark text-white hover:text-red-500 text-2xl font-medium" (click)="onDropdownMenuClick()"></i>
+                <i id="closeIcon" class="fa-solid fa-xmark text-white hover:text-red-500 hover:scale-110 transition duration-150 ease-in-out text-2xl font-medium" (click)="onDropdownMenuClick()"></i>
                 <div class="absolute top-0 right-0 mt-10 rounded-md shadow-lg ring-1 ring-black/5" tabindex="-1">
                     <div class="flex flex-col py-1 text-white font-medium" (click)="onDropdownMenuClick()">
-                        <a routerLink="/" fragment="about" class="px-4 py-2 hover:bg-red-500 transition duration-150 ease-in-out" tabindex="-1" id="aboutMenuItem">About</a>
-                        <a routerLink="/" fragment="work" class="px-4 py-2 hover:bg-red-500 transition duration-150 ease-in-out" tabindex="-1" id="workMenuItem">Work</a>
-                        <a routerLink="/" fragment="contact" class="px-4 py-2 hover:bg-red-500 transition duration-150 ease-in-out" tabindex="-1" id="contactMenuItem">Contact</a>
+                        <a routerLink="/" fragment="about" class="px-4 py-2 hover:bg-red-500 hover:scale-110 transition duration-150 ease-in-out" tabindex="-1" id="aboutMenuItem">About</a>
+                        <a routerLink="/" fragment="work" class="px-4 py-2 hover:bg-red-500 hover:scale-110 transition duration-150 ease-in-out" tabindex="-1" id="workMenuItem">Work</a>
+                        <a routerLink="/" fragment="contact" class="px-4 py-2 hover:bg-red-500 hover:scale-110 transition duration-150 ease-in-out" tabindex="-1" id="contactMenuItem">Contact</a>
                     </div>
                 </div>
             }
