--- a/src/app/feature/work/components/experience-card.component.html
+++ b/src/app/feature/work/components/experience-card.component.html
@@ -1,9 +1,12 @@
 <div class="flex flex-col bg-gradient-to-b from-red-500 to-red-700 px-10 py-6 rounded-lg ring-1 ring-black/5">
   <h3>{{ history.profession }}</h3>
+
   <p>{{ history.institution }}</p>
+
   @for (project of history.projects; track project) {
-  <app-project-section class="mt-6" [project]="project"></app-project-section>
-  } @if (!!history.task) {
-  <app-task-section class="mt-6" [task]="history.task"></app-task-section>
+    <app-experience-card-project-section class="mt-6" [project]="project"></app-experience-card-project-section>
+  } 
+  @if (!!history.task) {
+    <app-task-section class="mt-6" [task]="history.task"></app-task-section>
   }
 </div>
