refactor: rename `TaskSectionComponent`

--- a/src/app/feature/work/components/experience-card-project-section.component.html
+++ b/src/app/feature/work/components/experience-card-project-section.component.html
@@ -2,5 +2,5 @@
 <p>{{ project.description }}</p>
 
 @if (!!project.task) {
-<app-task-section class="mt-2" [task]="project.task"></app-task-section>
+    <app-experience-card-task-section class="mt-2" [task]="project.task"></app-experience-card-task-section>
 }
