--- a/src/app/feature/work/components/experience-card.component.html
+++ b/src/app/feature/work/components/experience-card.component.html
@@ -7,6 +7,6 @@
     <app-experience-card-project-section class="mt-6" [project]="project"></app-experience-card-project-section>
   } 
   @if (!!history.task) {
-    <app-task-section class="mt-6" [task]="history.task"></app-task-section>
+    <app-experience-card-task-section class="mt-6" [task]="history.task"></app-experience-card-task-section>
   }
 </div>
