feat: display small title, title and text
- display small title, tilte and text in Projects section

--- a/src/app/feature/work/components/project.component.html
+++ b/src/app/feature/work/components/project.component.html
@@ -1,3 +1,12 @@
 <app-section-wrapper>
-    <p>project works!</p>
+  <p id="smallTitle">MY WORK</p>
+
+  <h2 id="title">Projects.</h2>
+
+  <p id="projectsText" class="md:w-3/4 lg:w-2/3 xl:w-1/2">
+    The projects below showcase my skills and experience. 
+    Each one includes a brief description and a link to my GitHub repository, 
+    where you can explore live demos. These projects demonstrate my expertise in solving problems, 
+    utilizing various technologies, and managing projects efficiently.
+  </p>
 </app-section-wrapper>
