--- a/src/app/feature/work/components/project.component.html
+++ b/src/app/feature/work/components/project.component.html
@@ -1,12 +1,22 @@
-<app-section-wrapper>
-  <p id="smallTitle">MY WORK</p>
+@if(!!projects && projects.length > 0){
+    <app-section-wrapper>
+        <p id="smallTitle">MY WORK</p>
 
-  <h2 id="title">Projects.</h2>
+        <h2 id="title">Projects.</h2>
 
-  <p id="projectsText" class="md:w-3/4 lg:w-2/3 xl:w-1/2">
-    The projects below showcase my skills and experience. 
-    Each one includes a brief description and a link to my GitHub repository, 
-    where you can explore live demos. These projects demonstrate my expertise in solving problems, 
-    utilizing various technologies, and managing projects efficiently.
-  </p>
-</app-section-wrapper>
+        <p id="projectsText" class="md:w-3/4 lg:w-2/3 xl:w-1/2">
+            The projects below showcase my skills and experience. 
+            Each one includes a brief description and a link to my GitHub repository, 
+            where you can explore live demos. These projects demonstrate my expertise in solving problems, 
+            utilizing various technologies, and managing projects efficiently.
+        </p>
+
+        <div class="flex flex-row justify-center">
+            <div class="flex flex-col w-10/12 sm:w-8/12 md:w-7/12 lg:w-6/12 xl:w-5/12 mt-5 space-y-6">
+                @for(project of projects; track project) {
+                    <app-project-card [project]="project" class="mt-6"></app-project-card>
+                }
+            </div>
+        </div>
+    </app-section-wrapper>
+}
