feat: implement scroll view
- also improved some styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
   <app-home></app-home>
   <app-about id="about"></app-about>
   <app-work id="work"></app-work>
-  <app-contact id="contact" class="h-screen"></app-contact>
+  <app-contact id="contact"></app-contact>
 </div>
