--- a/src/app/feature/work/components/project.component.html
+++ b/src/app/feature/work/components/project.component.html
@@ -12,10 +12,12 @@
         </p>
 
         <div class="flex flex-row justify-center">
-            <div class="flex flex-col w-10/12 sm:w-8/12 md:w-7/12 lg:w-6/12 xl:w-5/12 mt-5 space-y-6">
-                @for(project of projects; track project) {
-                    <app-project-card [project]="project" class="mt-6"></app-project-card>
-                }
+            <div class="flex flex-col w-10/12 sm:w-8/12 md:w-7/12 lg:w-6/12 2xl:w-4/12 mt-11 space-y-6">
+                <cdk-virtual-scroll-viewport itemSize="50" class="w-full h-screen rounded-md">
+                    <div class="mb-6 last:mb-0" *cdkVirtualFor="let project of projects">
+                        <app-project-card [project]="project"></app-project-card>
+                    </div>
+                </cdk-virtual-scroll-viewport>
             </div>
         </div>
     </app-section-wrapper>
