--- a/src/app/feature/work/components/experience.component.html
+++ b/src/app/feature/work/components/experience.component.html
@@ -8,8 +8,10 @@
     <div class="grid grid-cols-[0.1rem_1fr] gap-x-16 lg:hidden">
         @for(experience of history; track experience) {
             <div class="relative bg-gradient-to-b from-red-500 via-red-700 to-red-500">
-                <div class="absolute w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500 -translate-x-1/2 mt-20">
-                    <img id="logoMobile" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                <div class="absolute -translate-x-1/2 mt-20">
+                    <div class="flex flex-row justify-center items-center w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500">
+                        <img id="logoMobile" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                    </div>
                 </div>
             </div>
             <div class="flex flex-col mt-20 gap-y-2">
@@ -25,16 +27,20 @@
             @if (odd) {
                 <div id="workingPeriodDesktop" class="text-white text-right mt-24">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
                 <div class="relative bg-gradient-to-b from-red-500 via-red-700 to-red-500">
-                    <div class="absolute w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500 -translate-x-1/2 mt-20">
-                        <img id="logoDesktop" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                    <div class="absolute -translate-x-1/2 mt-20">
+                        <div class="flex flex-row justify-center items-center w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500">
+                            <img id="logoDesktop" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                        </div>
                     </div>
                 </div>
                 <app-experience-card id="experienceCardDesktop" class="mt-24" [history]="experience"></app-experience-card>
             } @else {
                 <app-experience-card id="experienceCardDesktop" class="mt-24" [history]="experience"></app-experience-card>
                 <div class="relative bg-gradient-to-b from-red-500 via-red-700 to-red-500">
-                    <div class="absolute w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500 -translate-x-1/2 mt-20">
-                        <img id="logoDesktop" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                    <div class="absolute -translate-x-1/2 mt-20">
+                        <div class="flex flex-row justify-center items-center w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500">
+                            <img id="logoDesktop" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                        </div>
                     </div>
                 </div>
                 <div id="workingPeriodDesktop" class="text-white mt-24">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
