refactor: move Image Interface to shared module
- use interface in about and work module

--- a/src/app/feature/work/components/experience.component.html
+++ b/src/app/feature/work/components/experience.component.html
@@ -10,7 +10,7 @@
             <div class="relative bg-gradient-to-b from-red-500 via-red-700 to-red-500">
                 <div class="absolute -translate-x-1/2 mt-20">
                     <div class="flex flex-row justify-center items-center w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500">
-                        <img id="logoMobile" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                        <img id="logoMobile" src="{{ assetsPath }}/{{ experience.logo.srcImage }}" alt="{{ experience.logo.alt }}">
                     </div>
                 </div>
             </div>
@@ -29,7 +29,7 @@
                 <div class="relative bg-gradient-to-b from-red-500 via-red-700 to-red-500">
                     <div class="absolute -translate-x-1/2 mt-20">
                         <div class="flex flex-row justify-center items-center w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500">
-                            <img id="logoDesktop" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                            <img id="logoDesktop" src="{{ assetsPath }}/{{ experience.logo.srcImage }}" alt="{{ experience.logo.alt }}">
                         </div>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                 <div class="relative bg-gradient-to-b from-red-500 via-red-700 to-red-500">
                     <div class="absolute -translate-x-1/2 mt-20">
                         <div class="flex flex-row justify-center items-center w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500">
-                            <img id="logoDesktop" src="{{ assetsPath }}/{{ experience.logo }}" alt="{{ experience.institution }} logo">
+                            <img id="logoDesktop" src="{{ assetsPath }}/{{ experience.logo.srcImage }}" alt="{{ experience.logo.alt }}">
                         </div>
                     </div>
                 </div>
