--- a/src/app/feature/about/components/card.component.html
+++ b/src/app/feature/about/components/card.component.html
@@ -1,4 +1,4 @@
 <div class="flex flex-col justify-center items-center min-h-60 w-40 md:min-h-72 md:w-56 bg-gradient-to-b from-red-500 to-red-700 px-10 py-6 rounded-lg ring-1 ring-black/5">
-  <img id="icon" class="w-14 h-14 md:w-20 md:h-20" src="{{ service.icon }}" alt="{{ service.title }} icon" />
+  <img id="icon" class="w-14 h-14 md:w-20 md:h-20" src="{{ service.icon.srcImage }}" alt="{{ service.icon.alt }}" />
   <p class="text-base text-center font-bold mt-5">{{ service.title }}</p>
 </div>
