--- a/src/app/feature/work/components/project-card.component.html
+++ b/src/app/feature/work/components/project-card.component.html
@@ -2,7 +2,7 @@
     <h3 id="title" class="mb-4">{{ project.title }}</h3>
 
     <a href="{{ project.githubUrl }}" target="_blank">
-        <div class="absolute top-0 right-0 mt-20 mr-20 text-4xl lg:mr-24 lg:text-5xl opacity-90 hover:scale-110 transition duration-150 ease-in-out">
+        <div class="absolute top-0 right-0 mt-20 mr-20 text-4xl lg:mr-24 lg:text-5xl hover:scale-110 transition duration-150 ease-in-out">
             <i class="fa-solid fa-square fa-stack-1x text-white"></i>
             <i id="githubIcon" class="fa-brands fa-square-github fa-stack-1x text-red-500 hover:text-emerald-600"></i>
         </div>
