--- a/src/app/feature/work/components/work.component.html
+++ b/src/app/feature/work/components/work.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col space-y-20 md:space-y-36">
-  @if(!!workExperience && workExperience.length > 0) {
-    <app-experience id="workExperience" [smallTitle]="'WHAT I HAVE DONE SO FAR'" [title]="'Experience.'" [history]="workExperience"></app-experience>
+  @if(!!workHistory && workHistory.length > 0) {
+    <app-experience id="workExperience" [smallTitle]="'WHAT I HAVE DONE SO FAR'" [title]="'Experience.'" [history]="workHistory"></app-experience>
     <app-employment-reference></app-employment-reference>
   }
   <app-experience id="academicHistory" [smallTitle]="'WHAT I HAVE STUDIED SO FAR'" [title]="'Academic History.'" [history]="academicHistory"></app-experience>
