feat: improve project card design

--- a/src/app/feature/work/components/project-card.component.html
+++ b/src/app/feature/work/components/project-card.component.html
@@ -8,7 +8,7 @@
         </div>
     </a>
 
-    <img id="image" class="rounded-2xl" (mouseover)="onMouseOver()" (mouseleave)="onMouseLeave()" src="{{ imageSource }}" alt="{{ project.title }} img"/>
+    <img id="image" class="rounded-lg ring-1 ring-black/5" (mouseover)="onMouseOver()" (mouseleave)="onMouseLeave()" src="{{ imageSource }}" alt="{{ project.title }} img"/>
 
     <p id="description" class="mt-4">{{ project.description }}</p>
 
