--- a/src/app/feature/about/components/about.component.html
+++ b/src/app/feature/about/components/about.component.html
@@ -15,7 +15,7 @@
   
   <div class="flex flex-row flex-wrap justify-center mt-5">
     @for(service of services; track service.title) {
-    <app-card class="mx-3 mt-6" [service]="service"></app-card>
+    <app-service-card class="mx-3 mt-6" [service]="service"></app-service-card>
     }
   </div>
 </app-section-wrapper>
