feat: display planet earth

--- a/src/app/feature/contact/components/contact.component.html
+++ b/src/app/feature/contact/components/contact.component.html
@@ -1,3 +1,6 @@
 <app-section-wrapper>
-    <app-contact-editor></app-contact-editor>
+    <div class="flex flex-col-reverse justify-between items-center 2xl:flex-row 2xl:justify-around 2xl:h-screen gap-y-20">
+        <app-contact-editor class="w-full xl:w-10/12 2xl:w-5/12"></app-contact-editor>
+        <app-planet-earth class="w-full 2xl:w-7/12"></app-planet-earth>
+    </div>
 </app-section-wrapper>
