feat: improve style

--- a/src/app/feature/contact/components/contact.component.html
+++ b/src/app/feature/contact/components/contact.component.html
@@ -1,6 +1,6 @@
 <app-section-wrapper>
-    <div class="flex flex-col-reverse justify-between items-center 2xl:flex-row 2xl:justify-around 2xl:h-screen gap-y-20">
+    <div class="flex flex-col-reverse justify-between items-center 2xl:flex-row 2xl:justify-around gap-y-20 md:gap-y-48">
         <app-contact-editor class="w-full xl:w-10/12 2xl:w-5/12"></app-contact-editor>
-        <app-planet-earth class="w-full 2xl:w-7/12"></app-planet-earth>
+        <app-planet-earth class="w-full scale-110 2xl:scale-100 2xl:w-7/12"></app-planet-earth>
     </div>
 </app-section-wrapper>
