--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col bg-gradient-to-b from-stone-800 to-stone-900 space-y-20 md:space-y-36">
+<div class="flex flex-col space-y-20 md:space-y-48">
   <app-nav-bar></app-nav-bar>
   <app-home></app-home>
   <app-about id="about"></app-about>
