--- a/src/app/feature/work/components/project.component.html
+++ b/src/app/feature/work/components/project.component.html
@@ -12,9 +12,9 @@
         </p>
 
         <div class="flex flex-row justify-center">
-            <div class="flex flex-col w-10/12 sm:w-8/12 md:w-7/12 lg:w-6/12 2xl:w-5/12 mt-11 space-y-6">
+            <div class="flex flex-col w-full sm:w-10/12 md:w-9/12 lg:w-8/12 lx:w-7/12 2xl:w-6/12 mt-11 space-y-6">
                 <cdk-virtual-scroll-viewport itemSize="50" class="w-full h-screen rounded-md">
-                    <div class="mb-6 last:mb-0" *cdkVirtualFor="let project of projects">
+                    <div class="mb-7 last:mb-0" *cdkVirtualFor="let project of projects">
                         <app-project-card [project]="project"></app-project-card>
                     </div>
                 </cdk-virtual-scroll-viewport>
