--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,10 @@
 @tailwind utilities;
 
 @layer base {
-    html {
+    :root {
+        @apply bg-gradient-to-b from-stone-800 via-stone-900 via-75% xl:via-85% to-stone-950;
+        @apply pb-20;
+        @apply md:pb-48;
         font-family: "Liberation Mono", "Courier New";
     }
 
